more spacing fixes

--- a/media/css/cms/flare26-banner.css
+++ b/media/css/cms/flare26-banner.css
@@ -28,9 +28,7 @@
 
 .fl-banner .fl-heading-group {
     margin-bottom: 0;
-    display: flex;
-    flex-direction: column;
-    gap: var(--token-spacing-3xl);
+    padding-bottom: 0;
 }
 
 .fl-banner .fl-heading,
