--- a/media/css/cms/flare26-card-gallery.css
+++ b/media/css/cms/flare26-card-gallery.css
@@ -10,7 +10,6 @@ Card Gallery - Flare 2026 Design System Card Gallery Component
 
 .fl-card-gallery {
     --gallery-card-padding: var(--token-layout-2xs);
-    --gallery-card-radius: var(--token-border-radius-md);
     --gallery-callout-card-padding: var(--token-layout-md) var(--token-layout-2xs);
     --gallery-callout-card-max-width: 400px;
     --gallery-main-image-height: 450px;
@@ -28,10 +27,14 @@ Card Gallery - Flare 2026 Design System Card Gallery Component
 .fl-card-gallery-card {
     display: grid;
     gap: var(--token-spacing-md);
-    border-radius: var(--gallery-card-radius);
+    border-radius: var(--gallery-card-radius, var(--token-border-radius-md));
     overflow: hidden;
     color: var(--fl-theme-color-text);
     background-color: var(--card-bg-color);
+}
+
+.fl-card-gallery-card .fl-buttons {
+    margin-top: var(--token-spacing-lg);
 }
 
 .purple-card-theme {
@@ -135,7 +138,6 @@ Card Gallery - Flare 2026 Design System Card Gallery Component
 @media (--viewport-md-up) {
     .fl-card-gallery {
         --gallery-card-padding: var(--token-layout-xs);
-        --gallery-card-radius: var(--token-border-radius-xl);
         --gallery-main-image-height: 120px;
         --gallery-secondary-image-height: 120px;
         --gallery-callout-card-padding: var(--token-layout-xs) var(--token-layout-2xs);
@@ -173,6 +175,7 @@ Card Gallery - Flare 2026 Design System Card Gallery Component
 
 @media (--viewport-lg-up) {
     .fl-card-gallery {
+        --gallery-card-radius: var(--token-border-radius-xl);
         --gallery-card-padding: var(--token-layout-md);
         --gallery-callout-card-padding: var(--token-layout-md) var(--token-layout-2xs);
         --gallery-main-image-height: 430px;
